# flight_deviance_detection

./: .gitignore  README.md  dl.py  inference.py  main.py  pyproject.toml
data/: plane_features_reduced.csv
src/: data_processing.py  main.py
src/model/: catboost.py  elliptic_envelope.py  gradient_boost.py  isolation_forest.py  knn.py  lightgbm.py  mlp.py  random_forest.py  svm.py  xgboost.py
src/model_cuml/: random_forest_cuda.py
src/models_cuml/: knn_cuda.py  svc_cuda.py
